5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1596_1017.log
== TEST (2019-03-31 10:53:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:53:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
t1 = radians(float(input("Latitude de P1: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 10:54:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1 = radians(float(input("Latitude de P1: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:01:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'acos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:03:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
from math import acos
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:04:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
from math import acos
form math import sin
from math import cos
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- ERROR:
File "XXXX", line 11
    form math import sin
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:05:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
from math import acos
from math import sin
from math import cos
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:05:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
from math import acos
from math import sin
from math import cos
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- EXECUTION TIME:
0.135701
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:07:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
from math import acos, sin, cos
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- EXECUTION TIME:
0.17567
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:36:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import radians, acos, sin, cos
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
R=6371.01
d=R*acos((sin(t1)*(sin(t2))+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d,2))




-- EXECUTION TIME:
0.179042
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
